welcome.lessons.welcome.array.golomb.Golomb.scala.error
golomb:46: error: not found: value tab
var tab(1) = 1
    ^golomb:47: error: not found: value tab
var tab(2) = 2
    ^golomb:50: error: not found: value tab
		k = tab(i)
                    ^golomb:51: error: not found: value tab
		if (tab(i) != i-k) {
                    ^golomb:52: error: not found: value tab
			tab(i) = tab(i-1)
                        ^golomb:54: error: not found: value tab
			tab(i) = k + 1
                        ^golomb:57: error: not found: value tab
	return tab(num)
               ^